@@ -1813,6 +1813,8 @@ body {
 
 <p><strong>power.target_nearest</strong> | <code>float</code> | Will automatically target the nearest enemy within the specified range.</p>
 
+<p><strong>power.disable_equip_slots</strong> | <code>list(predefined_string)</code> | Passive powers only. A comma separated list of equip slot types to disable when this power is active.</p>
+
 <hr />
 
 <h4>QuestLog</h4>
